--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+
+
+#app 3
+*/public/assets/shirt-pattern/*
+public/assets/shirt-pattern/*
+*/public/assets/uploads/*
+public/assets/uploads/*
+.gitignore
+*/.gitignore
